# 2eitram2

./: .gitignore  .timetracker  LICENSE  README.md  package-lock.json  package.json
src/: chat.html  index.html  main.js  profiles.js  video.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.sqlx/: config.toml
src-tauri/capabilities/: mobile.json
src-tauri/icons/: icon.icns
src-tauri/kyber/src/: lib.rs
src-tauri/migrations/: 20250318171257_create_chats_table.sql
src-tauri/minimalist_pq_mls/src/: crypto.rs  group.rs  packet.rs  secrets.rs  tree.rs
src-tauri/src/: lib.rs
src-tauri/src/crypto/: keys.rs  mod.rs  objects.rs  utils.rs
src-tauri/src/database/: commands.rs  group_chat.rs  mod.rs  objects.rs  private_chat.rs  utils.rs
src-tauri/src/encryption/: keys.rs  mod.rs  utils.rs
src-tauri/src/groups/: commands.rs  mod.rs  tcp_handles.rs  utils.rs
src-tauri/src/modules/: app.rs  database.rs  encryption.rs  handle.rs  handle_keys.rs  mod.rs  objects.rs  tcp.rs  utils.rs
src-tauri/src/network/: client.rs  commands.rs  handle.rs  mod.rs  packet.rs  utils.rs
src-tauri/src/utils/: settings.rs  utils.rs
src/css/: chat.css  index.css  profiles.css
src/js/: chat.js  index.js  video.js
src/js/chat_helpers/: events.js  listener.js  sanitize.js  utils.js  video.js
